--- a/miao/点击加分效果.html
+++ b/miao/点击加分效果.html
@@ -5,6 +5,12 @@
     <title>点击加分效果</title>
 </head>
 <body>
-    <div></div>
+    <div class="list">
+        <div class="box">
+            <ul>
+
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
