--- a/miao/控制滚动.html
+++ b/miao/控制滚动.html
@@ -41,7 +41,7 @@
         for(var i = 0 ;i < oLi.length;i++){
             num +=oLi[i].offsetHeight;
         }
-        console.log(num;
+        console.log(num)
         oTop.onmousedown = function () {
             if (oUl.scrollTop < num){
                 timer = setInterval(function () {
