--- a/miao/点击加分效果.html
+++ b/miao/点击加分效果.html
@@ -3,12 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <title>点击加分效果</title>
+    <style>
+        #list{width: 480px;border: 1px solid grey;margin-top: 200px;height: 30px}
+        #list .box{width: 0;background: red;height: 100%}
+        #list ul{padding: 0;margin: 0;width: 500px;list-style: none;position: relative}
+        #list ul li{float: left;margin-right: 20px;height: 30px;line-height: 30px;position: absolute;opacity: 1}
+        /*@keyframes animateoptacy {*/
+            /*form{opacity: 1}*/
+            /*to{opacity: 0}*/
+        /*}*/
+
+    </style>
+    <script>
+        window.onload = function () {
+            var oList = document.getElementById('list');
+            var oBox  = oList.getElementsByClassName('box')[0];
+            var oUl = oList.getElementsByTagName('ul')[0];
+            var oLi = oUl.getElementsByTagName('li');
+            var num = 0;
+            var width = 0;
+            var j =0;
+            var select = true;
+            console.log(oList);
+            for(var i = 0;i<oLi.length;i++){
+                oLi[i].style.left = 40*i + 'px';
+            }
+            oList.onclick = function () {
+                clearInterval(timer);
+                width = parseInt(getComputedStyle(oList).width);
+                console.log(width);
+                var timer = setInterval(function () {
+                    if(select){
+                        num+=40;
+                        oBox.style.width = num + 'px';
+                        moveDiv(oLi[j],'bottom',20,100);
+
+                        j++;
+
+                        console.log(j);
+                        console.log(oLi.length);
+                        if(num >= width && j >= oLi.length){
+                            clearInterval(timer);
+                            num = 0;
+                            width = 0;
+                            j = 0;
+                            select = false;
+                        }
+                    }
+                },100);
+
+
+            }
+        }
+    </script>
+    <script src="move.js"></script>
 </head>
 <body>
-    <div class="list">
+    <div id="list">
         <div class="box">
             <ul>
-
+                <li>+1</li>
+                <li>+1</li>
+                <li>+1</li>
+                <li>+1</li>
+                <li>+1</li>
+                <li>+1</li>
+                <li>+1</li>
+                <li>+1</li>
+                <li>+1</li>
+                <li>+1</li>
+                <li>+1</li>
+                <li>+1</li>
             </ul>
         </div>
     </div>
